WebSocketサーバに接続できるよう実装

--- a/index.html
+++ b/index.html
@@ -20,9 +20,23 @@
   <div id="main" class="main"></div>
   <script src="picshare.js"></script>
   <script>
-    Elm.Picshare.init({
-      node: document.getElementById("main"),
-    });
+    (() => {
+      const app = Elm.Picshare.init({
+        node: document.getElementById('main')
+      })
+      
+      const listen = (url) => {
+        const socket = new WebSocket(url)
+
+        // WebSocketからデータを受け取ったElmのコードに渡す
+        socket.onmessage = (event) => {
+          app.ports.receive.send(event.data)
+        }
+      } 
+
+      // Elmからデータが渡ってくるのを待ち受ける
+      app.ports.listen.subscribe(listen)
+    })()
   </script>
 </body>
 </html>
